@@ -1,0 +1,382 @@
+# All translations in this file are community made, this means there may be errors / missed translations, if you are able to improve upon any translation it would be greatly appreciated
+
+# Able to help with translations? Either improving a already existing language, or adding a whole new one. Join the discord server: https://discord.gg/JF9DNs3 
+# or message me on spigot: https://www.spigotmc.org/members/booksaw123.120955/
+
+# Any placeholders from placeholder API will work in this file
+
+# Credit for contributions to this file: Nyaneo
+# Any placeholders from placeholder API will work in this file
+
+invalidArg: '&4인수가 잘못되었습니다. 도움말을 확인해주세요'
+inTeam: '&4이 작업을 수행하려면 팀에 속해야 합니다'
+internalError: '&4이 명령을 실행하는 중에 문제가 발생했습니다. 서버 소유자에게 보고하세요'
+notInTeam: '&4그 작업을 수행하기 전에 팀에서 나가야 합니다'
+needOwner: '&4그 작업을 수행하려면 팀 소유자여야 합니다'
+needAdmin: '&4그 작업을 수행하려면 팀의 관리자 또는 소유자여야 합니다'
+needPlayer: '&4그 작업을 수행하려면 플레이어여야 합니다'
+noPlayer: '&4지정된 플레이어를 찾을 수 없습니다'
+notTeam: '&6&4해당 팀이 존재하지 않습니다. 다음을 시도하세요: &b/team create <이름>'
+needSameTeam: '&6해당 사람과 동일한 팀에 속해 있지 않습니다'
+noPerm: '&4그 작업을 수행할 권한이 없습니다'
+prefixSyntax: '&7[%s&7] &r%s'
+bannedChar: '&4사용하려는 문자가 금지되었습니다'
+noTeam: '&4해당 팀이 존재하지 않습니다'
+loading: '&6로딩 중'
+cooldown.wait: '&4그 작업을 다시 실행하기 전에 %s초를 더 기다려야 합니다!'
+cost.tooPoor: '&4그 명령을 실행하기에 돈이 부족합니다'
+cost.run: '&4&l-%s'
+placeholder.noTeam: ''
+placeholder.noDescription: ''
+placeholder.money: '%s'
+placeholder.owner: 소유자
+placeholder.admin: 관리자
+placeholder.default: 기본
+placeholder.name: '%s'
+placeholder.tag: '%s'
+placeholder.displayname: '%s'
+placeholder.inteam: 'true'
+placeholder.notinteam: 'false'
+placeholder.noTitle: ''
+prefix.owner: ' **'
+prefix.admin: ' *'
+prefix.default: ' '
+create.exists: '&6해당 팀은 이미 존재합니다'
+create.success: '&6팀이 생성되었습니다'
+create.banned: '&4해당 팀 이름은 금지되었습니다'
+create.maxLength: '&4해당 팀 이름이 너무 깁니다'
+leave.success: '&6팀에서 나왔습니다'
+leave.lastOwner: '&6해당 팀 내에서 소유자 랭크로만 남아 있습니다. 다른 누군가를 승격시키거나 &b/team disband &6명령을 사용하여 팀을 해체하세요.'
+rank.noTeam: '&4팀을 찾을 수 없습니다'
+rank.info: '&6팀 위치:'
+rank.infos: '&6팀 랭크: &b%s &7(다음 랭크업을 위해 필요한 점수: %s)'
+rank.infom: '&6팀 랭크: &b%s &7(다음 랭크업을 위해 필요한 돈: $%s)'
+rank.infomm: '&6팀 랭크: &b%s &7(최고 랭크입니다)'
+rank.syntax: '&b%s: &6%s &7(%s)'
+delhome.success: '&6팀 홈이 삭제되었습니다'
+delhome.noHome: '&6팀이 홈을 설정하지 않았습니다'
+disband.success: '&6팀을 해체했습니다'
+disband.confirm: '&6다시 &b/team disband &6를 입력하여 확인하세요'
+description.success: '&6팀 설명을 변경했습니다'
+description.view: '&6팀 설명: %s'
+description.noDesc: '&6팀 설명이 설정되지 않았습니다'
+description.noPerm: '&4설명을 편집할 권한이 없습니다'
+name.success: '&6팀 이름을 변경했습니다'
+name.view: '&6팀 이름: %s'
+name.exists: '&4해당 팀은 이미 존재합니다'
+name.noPerm: '&4팀 이름을 변경할 권한이 없습니다'
+invite.success: '&6해당 플레이어를 초대했습니다'
+invite.invite: '&6팀 %s 에 가입하도록 초대되었습니다. 가입하려면 &b/team join <팀> &6을 입력하세요'
+invite.inTeam: '&6해당 플레이어는 이미 다른 팀에 속해 있습니다'
+invite.banned: '&6해당 플레이어는 귀하의 팀에서 금지되었습니다'
+invite.full: '&6귀하의 팀은 최대 크기에 도달했습니다. 더 많은 플레이어를 초대하려면 누군가를 팀에서 내보내세요'
+invite.expired: '&4%s 님의 초대가 만료되었습니다'
+join.success: '&6해당 팀에 가입했습니다'
+join.notify: '&6환영합니다. &b%s&6 님! 팀에 가입했습니다!'
+join.notInvited: '&6&4해당 팀에 초대되지 않았습니다'
+join.banned: '&6&4해당 팀에서 금지되었습니다'
+join.full: '&4해당 팀은 가득 찼습니다'
+open.successopen: '&6귀하의 팀은 이제 누구나 가입할 수 있습니다'
+open.successclose: '&6귀하의 팀은 이제 초대만 가능합니다'
+title.change: '&6귀하의 칭호가 &b%s&6 로 변경되었습니다'
+title.remove: '&6귀하의 칭호가 제거되었습니다'
+title.success: '&6해당 칭호가 변경되었습니다'
+title.tooLong: '&4해당 칭호가 너무 깁니다'
+title.noFormat: '&4칭호를 서식화할 권한이 없습니다'
+title.noColor: '&4칭호에 색상을 사용할 권한이 없습니다'
+title.reset: '&6귀하의 칭호가 초기화되었습니다'
+title.noPerm: '&4귀하의 팀 칭호를 변경할 권한이 없습니다'
+info.needTeam: '&6해당 이름 또는 플레이어를 찾을 수 없습니다'
+info.name: '&6이름: &b%s'
+info.description: '&6설명: &b%s'
+info.open: '&6공개 여부: &b%s'
+info.level: '&6레벨: &b%s'
+info.owner: '&6소유자: &b%s'
+info.admin: '&6관리자: &b%s'
+info.default: '&6회원: &b%s'
+info.tag: '&6태그: &b%s'
+info.fail: '&6해당 이름 또는 플레이어를 찾을 수 없습니다'
+info.score: '&6점수: &b%s'
+info.money: '&6잔액: &b%s'
+info.ally: '&6동맹 팀: &b%s'
+kick.success: '&6해당 플레이어를 팀에서 내보냈습니다'
+kick.notify: '&6팀 %s에서 귀하를 내보냈습니다'
+kick.title: '&4귀하를 귀하의 팀에서 내보냈습니다'
+kick.noPerm: '&6해당 플레이어를 내보낼 권한이 없습니다'
+ban.success: '&6해당 플레이어를 팀에서 금지했습니다'
+ban.notify: '&6팀 %s에서 금지되었습니다'
+ban.title: '&4귀하를 귀하의 팀에서 금지했습니다'
+ban.noPerm: '&6해당 사람을 금지할 권한이 없습니다'
+ban.already: '&6해당 플레이어는 이미 금지되었습니다'
+unban.success: '&6해당 플레이어의 금지가 해제되었습니다'
+unban.notify: '&6팀 %s에서 금지가 해제되었습니다'
+unban.noPerm: '&6해당 플레이어의 금지를 해제할 권한이 없습니다'
+unban.not: '&6해당 플레이어는 금지되지 않았습니다'
+promote.success: '&6해당 플레이어를 승격했습니다'
+promote.noPerm: '&6해당 플레이어를 승격할 권한이 없습니다'
+promote.max: '&6해당 플레이어는 이미 최대 랭크로 승격되었습니다!'
+promote.notify: '&6귀하가 승격되었습니다!'
+promote.maxAdmins: '&4귀하의 팀은 이미 최대 관리자 수에 도달했습니다. 관리자를 해제하거나 팀을 레벨 업하세요'
+promote.maxOwners: '&4귀하의 팀은 이미 최대 소유자 수에 도달했습니다. 소유자를 해제하거나 팀을 레벨 업하세요'
+demote.success: '&6해당 플레이어를 강등했습니다'
+demote.noPerm: '&6해당 플레이어를 강등할 권한이 없습니다'
+demote.min: '&6해당 플레이어는 이미 최하위 랭크입니다'
+demote.notify: '&6귀하가 강등되었습니다'
+demote.lastOwner: '&6최종 소유자를 강등할 수 없습니다. 먼저 다른 누군가를 승격하세요'
+demote.maxAdmins: '&4귀하의 팀은 이미 최대 관리자 수에 도달했습니다. 관리자를 제거하거나 팀을 레벨 업하세요'
+home.success: '&6귀하가 이동되었습니다'
+home.noHome: '&6귀하의 팀은 홈을 설정하지 않았습니다'
+home.world: '&4해당 팀 홈을 찾을 수 없습니다'
+sethome.success: '&6귀하의 팀 홈이 설정되었습니다'
+sethome.noPerm: '&6귀하의 랭크가 팀 홈을 설정하기에 충분하지 않습니다'
+chat.enabled: '&6귀하의 메시지가 팀 채팅으로 전송됩니다'
+chat.disabled: '&6귀하의 메시지가 전역 채팅으로 전송됩니다'
+color.success: '&6귀하의 팀 색상이 변경되었습니다'
+color.fail: '&6해당 색상은 인식되지 않습니다'
+color.banned: '&4색상만 사용할 수 있으며 서식 코드는 사용할 수 없습니다'
+deposit.tooLittle: '&4음수 금액을 입금할 수 없습니다'
+deposit.fail: '&4입금에 실패했습니다'
+deposit.success: '&6금액이 입금되었습니다'
+deposit.max: '&4해당 금액은 최대 팀 잔액을 초과합니다'
+withdraw.tooLittle: '&4음수 금액을 인출할 수 없습니다'
+withdraw.fail: '&4인출에 실패했습니다'
+withdraw.success: '&6금액이 인출되었습니다'
+withdraw.notEnough: '&6귀하의 팀에는 충분한 금액이 없습니다'
+ally.already: '&4이미 동맹 중입니다'
+ally.success: '&6귀하의 팀과 동맹 팀은 이제 동맹 관계입니다'
+ally.ally: '&6귀하의 팀은 이제 &b%s&6 와 동맹 관계입니다'
+ally.requested: '&6동맹 요청이 해당 팀에 전송되었습니다'
+ally.request: '&b%s&6 님이 동맹 요청을 보냈습니다. 수락하려면 &b/team ally <팀> &6을 사용하세요'
+ally.self: '&4자신의 팀과 동맹 관계를 설정할 수 없습니다'
+ally.from: '&6귀하에게 동맹 요청이 있습니다: %s'
+ally.noRequests: '&4귀하에게 동맹 요청이 없습니다'
+ally.onJoin: '&6동맹 요청이 있습니다. 보려면 &b/team ally &6을 사용하세요'
+ally.limit: '&4동맹 제한에 도달했습니다'
+ally.alreadyrequest: '&4해당 팀과 이미 동맹 요청을 보냈습니다'
+allychat.disabled: '&6귀하의 메시지가 더 이상 동맹 채팅으로 전송되지 않습니다'
+allychat.enabled: '&6귀하의 메시지가 이제 동맹 채팅으로 전송됩니다'
+allychat.syntax: '&d[%s]&f%s&f: %s'
+neutral.self: '&6귀하의 자신의 팀입니다'
+neutral.requestremove: '&6동맹 요청이 제거되었습니다'
+neutral.reject: '&4%s&b 팀과의 동맹 요청이 거부되었습니다'
+neutral.notAlly: '&4귀하의 팀은 해당 팀과 동맹 관계가 없습니다'
+neutral.success: '&4귀하의 팀은 해당 팀과 동맹 관계를 해제했습니다'
+neutral.remove: '&4귀하의 팀은 이제 &b%s&4 와 동맹 관계가 없습니다'
+list.noPage: '&6해당 페이지를 찾을 수 없습니다'
+list.header: '&7--- &b팀 목록 페이지 %s &7---'
+list.body: '&6%s: &b%s'
+list.footer: '&7--- &6더 많이 보려면 &b/team list [페이지] &6을 입력하세요'
+setowner.use: '&6해당 플레이어를 승격할 수 없습니다. &b/team setowner <플레이어> &6을 사용하여 해당 플레이어를 소유자로 승격하세요'
+setowner.success: '&6해당 플레이어가 이제 소유자입니다'
+setowner.notify: '&6귀하는 이제 팀의 소유자입니다'
+setowner.max: '&4해당 플레이어는 이미 소유자입니다'
+setwarp.exist: '&4해당 워프는 이미 존재합니다'
+setwarp.max: '&4귀하의 팀은 이미 설정 가능한 워프의 최대 개수에 도달했습니다'
+setwarp.success: '&6해당 워프가 생성되었습니다'
+setwarp.char: '&4해당 워프 이름에 금지된 문자가 포함되어 있습니다'
+warp.nowarp: '&4해당 워프가 존재하지 않습니다'
+warp.invalidPassword: '&4해당 워프의 암호가 잘못되었습니다'
+warp.success: '&6이동되었습니다'
+warps.syntax: '&6워프: &b%s'
+warps.none: '&4귀하의 팀에 설정된 워프가 없습니다'
+warp.world: '&4해당 워프의 위치를 찾을 수 없습니다'
+delwarp.success: '&4해당 워프가 삭제되었습니다'
+chat.syntax: '&b[팀]&f%s&f: %s'
+teleport.fail: '&4이동에 실패했습니다'
+teleport.wait: '&6대기 중: &b%s &6초'
+chest.claim.noChest: '&4귀하는 상자 위에 서 있지 않습니다'
+chest.claim.limit: '&4귀하의 팀은 최대 상자 개수를 청구했습니다'
+chest.claim.claimed: '&4해당 상자는 이미 청구되었습니다'
+chest.claim.success: '&6해당 상자를 청구했습니다'
+chest.remove.noChest: '&4귀하는 상자 위에 서 있지 않습니다'
+chest.remove.notClaimed: '&4귀하의 팀은 해당 상자를 청구하지 않았습니다'
+chest.remove.success: '&4귀하의 팀은 해당 상자에 대한 청구를 해제했습니다'
+chest.all.success: '&6모든 상자 청구가 해제되었습니다'
+chest.claimed: '&4해당 상자는 &a%s&4 에게 청구되었습니다'
+
+echest.echest: '엔더 상자'
+
+pvp.enabled: '&6팀의 PVP가 활성화되었습니다.'
+pvp.disabled: '&6팀의 PVP가 비활성화되었습니다.'
+
+rankup.max: '&4이미 최고 랭크입니다.'
+rankup.score: '&4랭크 업을 위해 %s 점수가 필요합니다.'
+rankup.money: '&4팀 잔액에 %s 금액이 필요합니다.'
+rankup.success: '&6당신의 팀이 레벨 업했습니다.'
+
+tag.banned: '&4해당 태그는 금지되었습니다.'
+tag.success: '&6태그가 성공적으로 변경되었습니다.'
+tag.maxLength: '&4태그가 너무 깁니다.'
+tag.noPerm: '&4팀 태그를 변경할 권한이 없습니다.'
+admin.cancel: '&4이 명령은 다른 플러그인에 의해 취소되었습니다.'
+admin.tag.success: '&6해당 팀의 태그가 성공적으로 변경되었습니다.'
+admin.setrank.success: '&6해당 팀의 랭크가 설정되었습니다.'
+admin.setrank.no: '&4해당 랭크가 존재하지 않거나 올바르게 설정되지 않았습니다.'
+
+admin.config.reload: '&6BetterTeams가 다시 로드되었습니다 (이 명령을 사용하는 동안 문제가 발생하는 경우 서버를 다시 시작하세요).'
+admin.holo.create.success: '&6홀로그램이 생성되었습니다.'
+admin.holo.remove.noHolo: '&4홀로그램을 찾을 수 없습니다.'
+admin.holo.remove.success: '&6홀로그램이 삭제되었습니다.'
+admin.title.success: '&6해당 플레이어의 타이틀이 변경되었습니다.'
+admin.title.reset: '&6해당 플레이어의 타이틀이 재설정되었습니다.'
+admin.version: '&6현재 플러그인 버전: &b%s'
+admin.versionstorage: '&6저장 방법: &b%s'
+admin.versionversion: '&6마인크래프트 버전: &b%s'
+admin.versionlanguage: '&6선택한 언어: &b%s'
+admin.noTeam: '&4이것은 팀이 아닙니다.'
+admin.home.success: '&6당신은 해당 팀의 홈으로 이동했습니다.'
+admin.home.noHome: '&4해당 팀은 홈을 설정하지 않았습니다.'
+admin.name.success: '&6팀 이름이 변경되었습니다.'
+admin.description.success: '&6해당 팀의 이름이 변경되었습니다.'
+admin.open.successopen: '&6해당 팀은 이제 모두에게 열려 있습니다.'
+admin.open.successclose: '&6해당 팀은 이제 초대 전용입니다.'
+admin.invite.success: '&6해당 플레이어가 팀에 초대되었습니다.'
+admin.create.success: '&6해당 팀이 생성되었습니다.'
+admin.join.banned: '&4해당 플레이어는 해당 팀에서 금지되었습니다.'
+admin.join.success: '&6해당 플레이어가 팀에 가입했습니다.'
+admin.join.notify: '&6당신은 팀 &b%s&6에 가입했습니다.'
+admin.join.full: '&4해당 팀이 가득 찼습니다.'
+admin.notInTeam: '&6해당 플레이어는 이 작업을 수행하기 전에 어떤 팀에도 속해 있지 않습니다.'
+admin.inTeam: '&4해당 플레이어는 어떤 팀에도 속해 있지 않습니다.'
+admin.leave.success: '&6해당 플레이어가 해당 팀을 나갔습니다.'
+admin.leave.notify: '&6당신은 해당 팀을 나갔습니다.'
+admin.demote.notify: '&6당신은 강등되었습니다.'
+admin.demote.success: '&6해당 플레이어가 강등되었습니다.'
+admin.demote.min: '&4해당 플레이어는 더 이상 강등될 수 없습니다.'
+admin.demote.maxAdmins: '&4해당 팀은 이미 최대 관리자 수에 도달했습니다. 이 플레이어를 강등하기 전에 하나를 제거하세요.'
+admin.promote.max: '&6해당 플레이어는 이미 최대 랭크입니다.'
+admin.promote.notify: '&6당신은 승격되었습니다.'
+admin.promote.success: '&6해당 플레이어가 승격되었습니다.'
+admin.promote.owner: '&6해당 팀은 단일 소유자만 가질 수 있도록 구성되어 있으며, 플레이어를 소유자로 설정하려면 &b/teama setowner <플레이어> &6을 사용하세요.'
+admin.promote.maxAdmins: '&4해당 팀은 이미 최대 관리자 수에 도달했습니다. 이 플레이어를 승격하기 전에 하나를 제거하세요.'
+admin.promote.maxOwners: '&4해당 팀은 이미 최대 소유자 수에 도달했습니다. 이 플레이어를 승격하기 전에 하나를 제거하세요.'
+admin.setowner.already: '&4해당 플레이어는 이미 소유자입니다.'
+admin.setowner.nonotify: '&6당신은 더 이상 팀의 소유자가 아닙니다.'
+admin.setowner.success: '&6해당 플레이어가 새로운 팀 소유자로 설정되었습니다.'
+
+admin.setowner.notify: '&6당신은 이제 팀의 소유자입니다.'
+admin.warps.none: '&4해당 팀은 워프를 설정하지 않았습니다.'
+admin.setwarp.success: '&6해당 워프가 설정되었습니다.'
+admin.setwarp.max: '&6해당 팀은 이미 최대 워프 수를 설정했습니다.'
+admin.purge.confirm: '&6확인하려면 다음 10초 내에 이 명령을 실행하십시오. &4이 작업은 취소할 수 없으며 모든 팀의 점수가 재설정됩니다.'
+admin.purge.success: '&6팀이 삭제되었습니다.'
+admin.score.tooSmall: '&4점수는 0보다 커야 합니다.'
+admin.score.success: '&6해당 팀의 점수가 변경되었습니다.'
+admin.bal.tooSmall: '&4잔액은 0보다 커야 합니다.'
+admin.bal.success: '&6해당 팀의 잔액이 변경되었습니다.'
+admin.update: '&4Better Teams의 새 버전이 출시되었습니다. 업데이트: (https://www.spigotmc.org/resources/better-teams.17129/)'
+admin.disband.success: '&6해당 팀이 성공적으로 해체되었습니다.'
+admin.color.success: '&6해당 팀의 색상이 변경되었습니다.'
+admin.chest.claim.success: '&6해당 상자를 팀을 대신하여 청구했습니다.'
+admin.chest.remove.success: '&6해당 상자의 청구를 성공적으로 제거했습니다.'
+admin.chest.all.success: '&6해당 팀의 모든 청구가 제거되었습니다.'
+admin.chest.remove.notClaimed: '&4어떤 팀도 해당 상자를 청구하지 않았습니다.'
+admin.chest.disable.already: '&4상자 청구가 이미 비활성화되었습니다.'
+admin.chest.disable.success: '&6상자 청구가 비활성화되었습니다.'
+admin.chest.disabled.bc: '&6&l모든 청구된 상자는 열 수 있습니다.'
+admin.chest.enable.already: '&4상자 청구가 이미 활성화되었습니다.'
+admin.chest.enable.success: '&6상자 청구가 활성화되었습니다.'
+admin.chest.enabled.bc: '&6&l모든 청구된 상자는 잠겨 있습니다.'
+admin.teleport.success: '&6해당 팀의 온라인 멤버가 모두 이동했습니다.'
+
+nametag.syntax: '&6&l%s&r '
+holo.leaderboard: '&6리더보드'
+holo.syntax: '&6%s: &b%s'
+holo.msyntax: '&6%s: &b$%s'
+top.leaderboard: '&6리더보드'
+top.syntax: '&b%s: &6%s &7(%s)'
+top.divide: '&f...'
+baltop.leaderboard: '&6리더보드'
+baltop.syntax: '&b%s: &6%s &7(%s)'
+baltop.divide: '&f...'
+spy.stop: '&6팀 메시지 감시가 중지되었습니다.'
+spy.start: '&6팀 메시지 감시가 시작되었습니다.'
+spy.team: '&7[&b%s&7]&f%s&f: %s'
+spy.ally: '&7[&d%s&7]&f%s&f: %s'
+
+uclaim.team: '&4클레임을 생성하려면 팀에 가입해야 합니다.'
+uclaim.member: '&4팀의 클레임을 나갈 수 없습니다.'
+uclaim.kick: '&4팀의 멤버를 클레임에서 강제로 내보낼 수 없습니다.'
+uclaim.ban: '&4팀의 멤버를 클레임에서 금지할 수 없습니다.'
+uclaim.dissolve: '&4당신의 팀이 해체되었으므로 클레임이 해소되었습니다.'
+
+
+help.description: 팀 설명 보기 및 변경하기
+help.ban: 지정된 플레이어를 팀에서 차단하기
+help.home: 팀 홈으로 순간이동하기
+help.help: 이 도움말 페이지 보기
+help.promote: 팀 내에서 지정된 플레이어 승격하기
+help.demote: 팀 내에서 지정된 플레이어 강등하기
+help.unban: 지정된 플레이어를 팀에서 차단 해제하기
+help.kick: 팀에서 해당 플레이어 추방하기
+help.leave: 현재 팀 나가기
+help.chat: 팀에게만 메시지 보내기
+help.name: 팀 이름 보기 및 변경하기
+help.sethome: 팀의 홈 설정하기
+help.create: 지정된 이름으로 팀 생성하기
+help.invite: 지정된 플레이어를 팀에 초대하기
+help.disband: 현재 팀 해체하기
+help.open: 팀이 초대 전용인지 전환하기
+help.info: 지정된 플레이어 또는 팀에 대한 정보 보기
+help.color: 팀의 색상 변경하기
+help.deposit: 팀 잔액에 돈 입금하기
+help.bal: 팀 잔액 보기
+help.withdraw: 팀 잔액에서 돈 인출하기
+help.title: 팀 내에서 플레이어의 직함 변경하기
+help.top: 최고 팀 보기
+help.rank: 팀의 순위 보기
+help.join: 지정된 팀 가입하기
+help.delhome: 팀 홈 삭제하기
+help.ally: 다른 팀과 동맹 요청하기
+help.neutral: 동맹 해제 및 동맹 요청 거부하기
+help.allychat: 동맹에게만 메시지 보내기
+
+command.create: create
+command.leave: leave
+command.disband: disband
+command.description: description
+command.invite: invite
+command.join: join
+command.name: name
+command.open: open
+command.info: info
+command.kick: kick
+command.promote: promote
+command.demote: demote
+command.home: home
+command.sethome: sethome
+command.ban: ban
+command.unban: unban
+command.chat: chat
+command.color: color
+command.title: title
+command.top: top
+command.baltop: baltop
+command.rank: rank
+command.delhome: delhome
+command.ally: ally
+command.neutral: neutral
+command.allychat: allychat
+command.list: list
+command.warp: warp
+command.setwarp: setwarp
+command.delwarp: delwarp
+command.warps: warps
+command.echest: echest
+command.rankup: rankup
+command.tag: tag
+command.pvp: pvp
+command.claim: claim
+command.remove: remove
+command.removeall: removeall
+command.chest: chest
+command.reload: reload
+command.chatspy: chatspy
+command.version: version
+command.purge: purge
+command.setrank: setrank
+command.add: add
+command.set: set
+command.score: score
+command.enableclaims: enableclaims
+command.disableclaims: disableclaims
