@@ -1,4 +1,9 @@
-# Any additional notes you would like to add about this file just DM me on Discord: ceymikey#0
+# All translations in this file are community made, this means there may be errors / missed translations, if you are able to improve upon any translation it would be greatly appreciated
+
+# Able to help with translations? Either improving a already existing language, or adding a whole new one. Join the discord server: https://discord.gg/JF9DNs3 
+# or message me on spigot: https://www.spigotmc.org/members/booksaw123.120955/
+
+# Any placeholders from placeholder API will work in this file
 
 # Credit for contributions to this file: Ceymikey
 # Any placeholders from placeholder API will work in this file
